--- a/index.html
+++ b/index.html
@@ -47,14 +47,9 @@
         .btn-gold { background: var(--gold); color: white; border: none; padding: 16px 35px; border-radius: 12px; font-weight: 900; cursor: pointer; font-size: 1.1rem; transition: 0.3s; }
         .btn-trans { background: transparent; color: white; border: 2px solid white; padding: 16px 35px; border-radius: 12px; font-weight: 900; text-decoration: none; display: flex; align-items: center; justify-content: center; gap: 10px; transition: 0.3s; }
 
-        /* أزرار تواصل تفاعلية زوم زووم */
         .social-hero { display: flex; gap: 20px; }
         .social-hero a { color: var(--white); font-size: 1.8rem; transition: 0.4s; }
         .social-hero a:hover { color: var(--gold); transform: translateY(-8px) scale(1.2); }
-
-        /* الأقسام تفاعلية */
-        #categoriesList img { transition: 0.4s ease; }
-        #categoriesList .stat-card:hover img { transform: scale(1.1); }
 
         .features-section { background: var(--bg); padding: 50px 5%; text-align: center; }
         .features-grid { display: grid; grid-template-columns: repeat(auto-fit, minmax(140px, 1fr)); gap: 15px; max-width: 1200px; margin: auto; }
@@ -70,7 +65,6 @@
         .btn-footer-wa { background: transparent; border: 1px solid rgba(255,255,255,0.4); color: white; padding: 10px 20px; border-radius: 8px; text-decoration: none; display: inline-block; margin: 5px; font-weight: 600; font-size: 0.9rem; }
         .btn-footer-prod { background: var(--gold); color: white; padding: 10px 20px; border-radius: 8px; text-decoration: none; display: inline-block; margin: 5px; font-weight: 600; font-size: 0.9rem; }
 
-        /* تصميم لوحة التحكم المتقدمة */
         .admin-box { background: #f4f4f4; padding: 20px; border-radius: 15px; margin-bottom: 20px; text-align: right; }
         .admin-table { width: 100%; border-collapse: collapse; margin-top: 15px; background: white; border-radius: 10px; overflow: hidden; font-size: 0.85rem; }
         .admin-table th { background: #eee; padding: 10px; }
@@ -292,7 +286,13 @@
             if(newVal) db.ref(ref).child(key).update({ name: newVal, title: newVal });
         }
 
-        // جلب البيانات مع إتاحة الحذف والتعديل في لوحة التحكم
+        // دالة استخراج ID يوتيوب
+        function extractYoutubeId(url) {
+            const regExp = /^.*(youtu.be\/|v\/|u\/\w\/|embed\/|watch\?v=|\&v=|shorts\/)([^#\&\?]*).*/;
+            const match = url.match(regExp);
+            return (match && match[2].length === 11) ? match[2] : null;
+        }
+
         function syncAdmin(ref, listId) {
             db.ref(ref).on('value', snap => {
                 const data = snap.val() || {};
@@ -331,7 +331,21 @@
         function renderGrid(t, i) { document.getElementById('catTitle').innerText = t; document.getElementById('catGrid').innerHTML = i.map(x => `<div style="background:white; border-radius:20px; overflow:hidden; box-shadow:0 8px 15px rgba(0,0,0,0.05);" onclick='openCalc(${JSON.stringify(x)})'><img src="${x.img}" style="width:100%; height:250px; object-fit:cover;"><div style="padding:22px; text-align:center;"><h3>${x.name}</h3><p style="color:var(--gold); font-weight:900;">${parseInt(x.price).toLocaleString()} د.ع / م</p></div></div>`).join(''); showPage('categoryView'); }
         function openCalc(p) { cur = p; document.getElementById('pName').innerText = p.name; document.getElementById('pPrice').innerText = parseInt(p.price).toLocaleString(); document.getElementById('pImg').src = p.img; document.getElementById('hIn').value = ""; showPage('productCalculator'); }
 
-        db.ref('doctor').on('value', snap => { const d = snap.val(); document.getElementById('doctorContent').innerHTML = d ? Object.values(d).map(i => `<div class="stat-card" style="margin-bottom:30px; text-align:right; padding:25px; background:white; border:1px solid #eee;">${i.type === 'vid' ? `<video src="${i.media}" controls style="width:100%; border-radius:20px;"></video>` : `<img src="${i.media}" style="width:100%; border-radius:20px;">`}<h3>${i.title}</h3><p>${i.desc}</p></div>`).join('') : ''; });
+        // التعديل هنا لعرض فيديوهات يوتيوب
+        db.ref('doctor').on('value', snap => {
+            const d = snap.val();
+            document.getElementById('doctorContent').innerHTML = d ? Object.values(d).map(i => {
+                let mediaTag = "";
+                if(i.type === 'vid') {
+                    const videoId = extractYoutubeId(i.media);
+                    mediaTag = `<div style="position:relative; padding-top:177.77%; background:#000; border-radius:20px; overflow:hidden;"><iframe style="position:absolute; top:0; left:0; width:100%; height:100%;" src="https://www.youtube.com/embed/${videoId}" frameborder="0" allowfullscreen></iframe></div>`;
+                } else {
+                    mediaTag = `<img src="${i.media}" style="width:100%; border-radius:20px;">`;
+                }
+                return `<div class="stat-card" style="margin-bottom:30px; text-align:right; padding:25px; background:white; border:1px solid #eee;">${mediaTag}<h3>${i.title}</h3><p>${i.desc}</p></div>`;
+            }).join('') : '';
+        });
+
         db.ref('payments').on('value', snap => { const p = snap.val(); document.getElementById('paymentList').innerHTML = p ? Object.values(p).map(i => `<div class="stat-card" style="margin-bottom:20px; text-align:center; background:white; border:1px solid #eee;"><h3>${i.name}</h3><img src="${i.qr}" style="width:250px; margin-top:15px; border-radius:20px;"></div>`).join('') : ''; });
     </script>
 </body>
